--- a/main.html
+++ b/main.html
@@ -7,8 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<table border=1>
+	<thead><th>Roll number</th>
+	<th>Name</th></thead>
+	<tbody>
+	<tr><td>28</td>
+	<td>shilpa</td></tr>
+	<tr><td>05</td>
+	<td>santosh</td></tr>
+	</tbody>
+</table>    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
